--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
     "github-download-parts": "^2.1.0",
+    "inquirer": "^6.2.1",
+    "ora": "^3.0.0",
     "shelljs": "^0.8.3"
   }
 }
