--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wxt-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "自动的微信模板生成工具",
   "main": "index.js",
   "bin": {
@@ -8,6 +8,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:xw5/wx-cli.git"
   },
   "homepage": "https://github.com/xw5/wx-cli",
   "bugs": "https://github.com/xw5/wx-cli/issues",
